add model mapper + refactor code