@@ -1,10 +1,9 @@
 package com.dtu.kolgo.service.impl;
 
-import com.dtu.kolgo.dto.request.EmailRequest;
-import com.dtu.kolgo.dto.request.PasswordUpdateRequest;
-import com.dtu.kolgo.dto.request.UserRequest;
-import com.dtu.kolgo.dto.response.ApiResponse;
-import com.dtu.kolgo.dto.response.UserResponse;
+import com.dtu.kolgo.dto.EmailDto;
+import com.dtu.kolgo.dto.PasswordUpdateDTO;
+import com.dtu.kolgo.dto.UserDto;
+import com.dtu.kolgo.dto.ApiResponse;
 import com.dtu.kolgo.exception.ExistsException;
 import com.dtu.kolgo.exception.InvalidException;
 import com.dtu.kolgo.exception.NotFoundException;
@@ -14,6 +13,7 @@ import com.dtu.kolgo.service.UserService;
 import com.dtu.kolgo.util.FileUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -23,7 +23,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.security.Principal;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,8 +31,10 @@ public class UserServiceImpl implements UserService {
 
     @Value("${file.image-path}")
     private String imagePath;
+
     private final UserRepository repo;
     private final PasswordEncoder passwordEncoder;
+    private final ModelMapper mapper;
 
     @Override
     public ApiResponse save(User user) {
@@ -42,16 +43,22 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<UserResponse> getAllResponses() {
+    public List<UserDto> getAllDto() {
+        System.out.println("user service");
         return repo.findAll().stream()
-                .map(user -> getResponse(user.getId()))
-                .collect(Collectors.toList());
+                .map(user -> mapper.map(user, UserDto.class))
+                .toList();
     }
 
     @Override
     public User get(int id) {
         return repo.findById(id)
                 .orElseThrow(() -> new NotFoundException("User ID not found: " + id));
+    }
+
+    @Override
+    public UserDto getDto(int id) {
+        return mapper.map(get(id), UserDto.class);
     }
 
     @Override
@@ -66,51 +73,45 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public UserResponse getResponse(int userId) {
-        User user = get(userId);
-        return mapEntityToDto(user);
+    public ApiResponse update(int id, UserDto dto, MultipartFile avatar) {
+        User user = get(id);
+        return update(user, dto, avatar);
     }
 
     @Override
-    public ApiResponse update(int userId, UserRequest request) {
-        User user = get(userId);
-        updateAvatar(user, request.getAvatar());
-        user.setFirstName(request.getFirstName());
-        user.setLastName(request.getLastName());
-        user.setEmail(request.getEmail());
-        user.setRole(request.getRole());
+    public ApiResponse update(User user, UserDto dto, MultipartFile avatar) {
+        updateAvatar(user, avatar);
+        user.setFirstName(dto.getFirstName());
+        user.setLastName(dto.getLastName());
         repo.save(user);
 
-        return new ApiResponse("Updated successfully User with ID: " + userId);
+        return new ApiResponse("Updated user successfully");
     }
 
     @Override
-    public ApiResponse updateAvatar(User user, MultipartFile avatar) {
-        String msg = "Update avatar failed";
-        if (avatar != null) {
-            String fileName = StringUtils.cleanPath(Objects.requireNonNull(avatar.getOriginalFilename()));
-            user.setAvatar(fileName);
-            repo.save(user);
-            String uploadDir = imagePath;
-            FileUtils.saveImage(uploadDir, fileName, avatar);
-        }
-        return new ApiResponse(msg);
+    public void updateAvatar(User user, MultipartFile avatar) {
+        if (avatar == null) return;
+        String fileName = StringUtils.cleanPath(Objects.requireNonNull(avatar.getOriginalFilename()));
+        user.setAvatar(fileName);
+        repo.save(user);
+        String uploadDir = imagePath;
+        FileUtils.saveImage(uploadDir, fileName, avatar);
     }
 
     @Override
-    public ApiResponse updateEmail(Principal principal, EmailRequest request) {
-        if (repo.existsByEmail(request.getEmail())) {
-            throw new ExistsException("Email already in use: " + request.getEmail());
+    public ApiResponse updateEmail(Principal principal, EmailDto dto) {
+        if (repo.existsByEmail(dto.getEmail())) {
+            throw new ExistsException("Email already in use: " + dto.getEmail());
         }
         User user = get(principal);
-        user.setEmail(request.getEmail());
+        user.setEmail(dto.getEmail());
         repo.save(user);
 
         return new ApiResponse("Updated email successfully");
     }
 
     @Override
-    public ApiResponse updatePassword(Principal principal, PasswordUpdateRequest request) {
+    public ApiResponse updatePassword(Principal principal, PasswordUpdateDTO request) {
         User user = get(principal);
 
         if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
@@ -120,33 +121,13 @@ public class UserServiceImpl implements UserService {
         user.setPassword(passwordEncoder.encode(request.getNewPassword()));
         repo.save(user);
 
-        return new ApiResponse("Updated password successfully !!");
+        return new ApiResponse("Updated password successfully");
     }
 
     @Override
     public ApiResponse delete(int userId) {
         repo.deleteById(userId);
-        return new ApiResponse("Deleted successfully User with ID: " + userId);
-    }
-
-    @Override
-    public UserResponse mapEntityToDto(User user) {
-        return UserResponse.builder()
-                .id(user.getId())
-                .avatar(user.getAvatar())
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .email(user.getEmail())
-                .phoneNumber(user.getPhone())
-                .role(user.getRole())
-                .build();
-    }
-
-    @Override
-    public List<UserResponse> mapEntityToDto(List<User> users) {
-        return users.stream()
-                .map(this::mapEntityToDto)
-                .collect(Collectors.toList());
+        return new ApiResponse("Deleted user successfully");
     }
 
 }
